# cat-overflow

./: .env  .gitignore  README.md  composer.json  dbcreate.sql  package-lock.json  package.json
app/: Image.php  OriginalVideo.php  User.php
app/Http/Controllers/: HomeController.php  OriginalVideoController.php  UserController.php
app/Http/Resources/: OriginalVideo.php
database/factories/: UserFactory.php
database/migrations/: 2014_10_12_000000_create_users_table.php  2018_03_06_064107_create_original_videos_table.php  2018_03_07_224939_create_images_table.php
face_detection_win/: CMakeLists.txt  constants.h  data_output.cpp  data_output.h  delaunay_triangle.cpp  delaunay_triangle.h  eyeLike.cpp  eyeLike.h  findEyeCenter.cpp  findEyeCenter.h  findEyeCorner.cpp  head_yaw_pitch_row.cpp  head_yaw_pitch_row.h  helpers.cpp  main.cpp
face_detection_win/test/: video_process.php
public/: undefined.js
public/js/: app.js
resources/assets/js/: app.js
resources/views/: edit.blade.php  home.blade.php  react.blade.php  welcome.blade.php
resources/views/auth/: login.blade.php  register.blade.php
resources/views/layouts/: app.blade.php
resources/views/users/: edit.blade.php  index.blade.php  show.blade.php
resources/views/video/: single.blade.php
routes/: api.php  web.php
stackoverflow/: package-lock.json  package.json
stackoverflow/src/: index.js
stackoverflow/src/actions/: types.js
stackoverflow/src/components/: Home.js
stackoverflow/src/reducers/: authReducer.js  index.js
stackoverflow/src/styles/: index.css
(+8 files in other folders)
